--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 body {
+  margin: 0;
+  padding: 0;
   text-align: center;
   background-color: #011F3F;
 }
@@ -6,15 +8,9 @@ body {
 #level-title {
   font-family: 'Press Start 2P', cursive;
   font-size: 30px;
-  margin:  5%;
+  margin: 0px;
+  padding: 30px 0px;
   color: #FEF2BF;
-}
-
-.container {
-  display: block;
-  width: 50%;
-  margin: auto;
-
 }
 
 .btn {
@@ -22,8 +18,13 @@ body {
   display: inline-block;
   height: 150px;
   width: 150px;
-  border: 10px solid black;
+  border: 10px solid #000000f2;
   border-radius: 20%;
+  cursor: pointer;
+  transition: all 0.1s ease-in;
+}
+.btn:hover {
+  box-shadow: rgba(255 255 255 / 24%) 0px 0px 0px 7px;
 }
 
 .game-over {
@@ -44,10 +45,10 @@ body {
 }
 
 .yellow {
-  background-color: yellow;
+  background-color: #ffae00;
 }
 
 .pressed {
   box-shadow: 0 0 20px white;
-  background-color: grey;
+  background-color: #000000f2;
 }
